[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["{{authors}}"]
homepage = "https://github.com/{{username}}/{{crate-name}}"
repository = "https://github.com/{{username}}/{{crate-name}}"

[workspace.dependencies]
{{crate-name}} = { version = "0.1.0", path = "packages/{{crate-name}}" }

xtask-base = { git = "https://github.com/{{username}}/rust-xtask-base" }
