[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["{{authors}}"]
homepage = "https://github.com/{{username | kebab_case}}/{{project-name}}"
repository = "https://github.com/{{username | kebab_case}}/{{project-name}}"

[workspace.dependencies]
{{project-name}} = { version = "0.1.0", path = "packages/{{project-name}}" }

xtask-base = { git = "https://github.com/{{username | kebab_case}}/rust-xtask-base" }
